Capture test system properties and heap settings in test JVM args
Test.getJvmArgs() only returns args set via jvmArgs(...); it silently drops systemProperty(...) values (managed by getSystemProperties()) and the heap settings (minHeapSize/maxHeapSize). A common systemProperty(...) config would be lost, potentially changing test behaviour or failing tests under a delegated coverage run.

- Merge getJvmArgs + getSystemProperties (as -Dkey=value) + min/max heap (as -Xms/-Xmx)

- Avoid the deprecated (Gradle 8) getAllJvmArgs()

- Fix the misleading Javadoc on getTestJvmArgs and getJvmArgs; note jvmArgumentProviders remain out of scope for older Gradle compatibility